--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <title>React App</title>
+    <title>Ecs Website</title>
   </head>
   <body>
     <div id="root"></div>
